--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'java'
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
 group 'Moosic'
-version '5.3'
+version '5.3b'
 
 mainClassName = "co.moosic.music.Login"
 
@@ -17,19 +17,17 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
-
 dependencies {
     //Lavaplayer
-    compile group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.63'
+    compile group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.72'
     //Nas for audio sending
     compile group: 'com.sedmelluq', name: 'jda-nas', version: '1.1.0'
     //JDA
-    compile group: 'net.dv8tion', name: 'JDA', version: '4.2.0_183'
+    compile group: 'net.dv8tion', name: 'JDA', version: '4.2.0_231'
     //Configuration builder
     compile group: 'com.github.kaaz', name: 'configurationbuilder', version: '0.4'
     //Logback
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-
 }
 
 compileJava {
@@ -52,5 +50,5 @@ jar {
 }
 
 wrapper {
-    gradleVersion = "6.5.1"
+    gradleVersion = "6.8"
 }
