--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'Moosic'
-version '5.3b'
+version '5.3c'
 
 mainClassName = "co.moosic.music.Login"
 
@@ -14,16 +14,17 @@ targetCompatibility = 1.8
 
 repositories {
     jcenter()
+    maven { url 'https://m2.dv8tion.net/releases' }
     maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     //Lavaplayer
-    compile group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.72'
+    compile group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.76'
     //Nas for audio sending
     compile group: 'com.sedmelluq', name: 'jda-nas', version: '1.1.0'
     //JDA
-    compile group: 'net.dv8tion', name: 'JDA', version: '4.2.0_231'
+    compile group: 'net.dv8tion', name: 'JDA', version: '4.2.1_254'
     //Configuration builder
     compile group: 'com.github.kaaz', name: 'configurationbuilder', version: '0.4'
     //Logback
@@ -50,5 +51,5 @@ jar {
 }
 
 wrapper {
-    gradleVersion = "6.8"
+    gradleVersion = "6.8.3"
 }
